overflow-y card fixed

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -492,6 +492,7 @@ footer p{
 
 .portfolio {
 	overflow-x: hidden;
+	overflow-y: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
